# Stratum

./: .gitattributes  .gitignore  LICENSE  README.md  go.mod  main.go
backend/: Cargo.toml  state.rs
backend/cmd/api/: main.go
backend/internal/handlers/projects/: projects.go
backend/migrations/: 20260710144604_create_users_table.sql  20260719145706_create_workspace_table.sql
backend/src/: main.rs  state.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/handlers/: auth.rs  health.rs  mod.rs  projects.rs  workspace.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  models.rs
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/lib/: Modal.svelte  Pop.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
internal/handlers/projects/: projects.go
internal/middleware/: middleware.go
stratum-frontend/src/lib/: Modal.svelte
stratum-frontend/src/routes/: +page.svelte
stratum-frontend/src/routes/dashboard/: +page.svelte
stratum-frontend/src/routes/login/: +page.svelte
stratum-frontend/src/routes/register/: +page.svelte
