[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8"
dotenvy = "0.15.7"
rand_core = { version = "0.10.1", features = ["OsRng"] }
serde = "1.0.228"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
