[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4.45"
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
serde = "1.0.228"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
uuid = "1.24.0"
